# MapSymbol

./: .gitignore  CMakeLists.txt  README.md
c/: CMakeLists.txt  symbol.cpp  symbol.h
cpp/: CMakeLists.txt  DLLExport.h  JsonHelper.h  SArc.cpp  SArc.h  SArc3Points.cpp  SArc3Points.h  SBytesCharTransformer.cpp  SBytesCharTransformer.h  SCanvas.cpp  SCanvas.h  SChord.cpp  SChord.h  SCircle.cpp  SCircle.h  SColor.cpp  SColor.h  SEllipse.cpp  SEllipse.h  SFill.cpp  SFill.h  SImage.cpp  SImage.h  SLineString.cpp  SLineString.h  SPath.cpp  SPath.h  SPie.cpp  SPie.h  SPoint.cpp  SPoint.h  SPolygon.cpp  SPolygon.h  SRect.cpp  SRect.h  SRegularPolygon.cpp  SRegularPolygon.h  SShape.cpp  SShape.h  SSolidFill.cpp  (+21 more)
data/: 1 copy.json  1.json  2.json  3.json  4.json  5.json  arc.json  arc3points.json  chord.json  circle.json  ellipse.json  linestring.json  pie.json  polygon.json  ring.json  square.json  star.json  systemfill.json  systemline.json  triangle.json
src/: CMakeLists.txt  DLLExport.h  JsonHelper.h  SArc.cpp  SArc.h  SArc3Points.cpp  SArc3Points.h  SCanvas.cpp  SCanvas.h  SChord.cpp  SChord.h  SCircle.cpp  SCircle.h  SColor.cpp  SColor.h  SEllipse.cpp  SEllipse.h  SFill.h  SPath.cpp  SPath.h  SPie.cpp  SPie.h  SPoint.cpp  SPoint.h  SRect.h  SRegularPolygon.cpp  SRegularPolygon.h  SShape.cpp  SShape.h  SSolidFill.cpp  SSolidFill.h  SStar.cpp  SStar.h  SStroke.cpp  SStroke.h  SSubPath.cpp  SSubPath.h  SSymbol.cpp  SSymbol.h  SSystemFill.cpp  (+44 more)
src_c/: allheaders.h  arc.h  chord.c  color.h  helper.h  linestring.c  path.c  path.h  pie.c  point.c  point.h  polygon.c  regularpolygon.c  shape.c  shape.h  star.c  stroke.c  symbol.c  symbol.h  systemfill.c  systemline.c  systemline.h
sym/: arc.json  chord.json  circle.json  dashdot.json  dashdotdot.json  dots.json  ellipse.json  halfcircle.json  linestring.json  path copy.json  path.json  path2.json  pie.json  polygon.json  quartercircle.json  regularpolygon.json  regularpolygon3.json  regularpolygon4.json  regularpolygon5.json  regularpolygon6.json  solidline.json  star.json  star5.json  star6.json  systemfill.json  systemline.json
test/: CMakeLists.txt  test.c  test_symbol
test/old_test/: test.c
test/symbol2image/: CMakeLists.txt  symbol2image.cpp
tools/: CMakeLists.txt
tools/symbol2image/: CMakeLists.txt  symbol2image  symbol2image.cpp
